[package]
name = "repl_framework"
version = "0.1.5"
authors = ["SuKiN-a <suryakiranpradosh@gmail.com>"]
edition = "2018"
description = "A crate to easily create simple repls and interpreters"
readme = "README.md"
repository = "https://github.com/SuKiN-a/repl_framework"
license-file = "LICENSE.md"
keywords = ["repl", "interpreter"]
categories = ["command-line-interface", "compilers"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
