[package]
name = "repl_framework"
version = "0.1.71"
authors = ["SuKiN-a <suryakiranpradosh@gmail.com>"]
edition = "2018"
description = "A crate to easily create simple repls and interpreters"
readme = "README.md"
repository = "https://github.com/SuKiN-a/repl_framework"
license = "GPL-3.0"
keywords = ["repl", "interpreter"]
categories = ["command-line-interface"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]